# logsloth

./: .gitignore  LICENSE  README.ko.md  README.md  jitpack.yml
android-sample/: .gitignore  build.gradle  settings.gradle
android-sample/app/: build.gradle
android-sample/app/src/main/: AndroidManifest.xml
android-sample/app/src/main/java/com/hhd/logslothsampleand/: MainActivity.kt  NoLog.kt  UseLogCat.kt  UseLogSloth.kt
android-sample/app/src/main/res/values/: strings.xml
android-sample/gradle/wrapper/: gradle-wrapper.properties
android-sample/logsloth/: build.gradle
android-sample/logsloth/src/main/: AndroidManifest.xml
android-sample/logsloth/src/main/java/com/hhd/logsloth/: LogSloth.java  LogSloth.kt  LsUtil.java
android-sample/logsloth/src/main/res/values/: strings.xml
cpp-sample/src/: CMakeLists.txt  Project.cbp  logsloth.h  main.cpp  stdafx.cpp  stdafx.h  test.cpp  test_app  test_callstack_first.cpp  test_callstack_first_app  test_enter_first.cpp  test_enter_first_app  vscode_snippet_cpp.json
docs/: LsConst.js  LsGitRepo.js  LsLogLineInfo.js  LsUtil.js
docs/libs/: jquery.html-svg-connect.js
ps/: logsloth.psd1  logsloth.psm1  psdebug.ps1
python-sample/: LICENSE  __init__.py  logsloth_test.py  requirements.txt  setup.py
python-sample/logsloth/: __init__.py  __main__.py  common_import.py  logsloth.py  logsloth_test.py  ls_color_selector.py  ls_hook_base.py
python-sample/logsloth.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
web/: logsloth.css  logsloth.html  logsloth.js
(+6 files in other folders)
